Revert "fix compat filter select on mobile (bug 1077129)"
This reverts commit 0e405e5eb959af2104d12121d0e2bdc8d72b8e5d.

--- a/src/media/css/compat-filtering.styl
+++ b/src/media/css/compat-filtering.styl
@@ -10,7 +10,7 @@
 
     select {
         font-size: 13px;
-        min-width: 209px;
+        min-width: 180px;
         vertical-align: middle;
     }
     label {
@@ -18,11 +18,9 @@
         display: inline-block;
         font-size: 12px;
         font-weight: 400;
-        line-height: $pretty-select-height;
+        line-height: 18px;
         margin-right: 5px;
-        text-align: right;
         vertical-align: middle;
-        width: 86px;
     }
 }
 
@@ -44,9 +42,7 @@
             right: 5px;
         }
         select {
-            background: #ccc;
-            color: #333;
-            padding: 8px;
+            padding-right: 75px;
         }
     }
 
@@ -91,10 +87,6 @@
     .compat-filter {
         right: 0;
         top: 0;
-
-        label {
-            line-height: 18px;
-        }
     }
     #search-results .expand-toggle {
         bottom: 0;
